@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2004/05/30 15:29:34 minskim Exp $
+# $NetBSD: Makefile,v 1.19 2004/10/03 00:12:55 tv Exp $
 #
 
 DISTNAME=	blas
@@ -17,8 +17,8 @@ COMMENT=	Basic Linear Algebra Subprograms (Fortran)
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 WRKSRC=			${WRKDIR}
+USE_LANGUAGES=		fortran
 USE_BUILDLINK3=		YES
-USE_FORTRAN=		YES
 USE_LIBTOOL=		YES
 
 INSTALLATION_DIRS=	lib
