@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2004/02/14 18:26:28 jmmv Exp $
+# $NetBSD: Makefile,v 1.16 2004/10/03 00:12:56 tv Exp $
 
 .if (${MACHINE_ARCH} == "powerpc")
 DISTNAME=		fftw-3.0.1-fma
@@ -19,7 +19,7 @@ USE_LIBTOOL=		yes
 PKGCONFIG_OVERRIDE+=	fftw.pc.in
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS=		--enable-shared
-USE_FORTRAN=		yes
+USE_LANGUAGES=		fortran
 USE_GNU_TOOLS+=		make
 INFO_FILES=		fftw3.info
 
