@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.57 2004/11/29 22:05:08 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.58 2004/12/24 17:21:01 jmmv Exp $
 #
 
 DISTNAME=	${SCIBASE}.src
@@ -19,7 +19,7 @@ NOT_FOR_PLATFORM=	NetBSD-1.[0-4]*-alpha NetBSD-1.5-alpha \
 			NetBSD-1.5.*-alpha NetBSD-1.5[A-U]-alpha
 
 USE_BUILDLINK3=		yes
-USE_FORTRAN=		yes
+USE_LANGUAGES=		fortran
 USE_X11BASE=		yes
 USE_LIBTOOL=		yes
 
