@@ -1,4 +1,4 @@
-# $NetBSD: sunpro.mk,v 1.24 2004/11/23 05:32:22 jlam Exp $
+# $NetBSD: sunpro.mk,v 1.25 2004/11/30 14:50:37 jlam Exp $
 
 .if !defined(COMPILER_SUNPRO_MK)
 COMPILER_SUNPRO_MK=	defined
@@ -82,5 +82,15 @@ ${_SUNPRO_${_var_}}:
 .    endfor
 .  endif
 .endfor
+
+# Force the use of f2c-f77 for compiling Fortran.
+_SUNPRO_USE_F2C=	no
+FCPATH=			/nonexistent
+.if !exists(${FCPATH})
+_SUNPRO_USE_F2C=	yes
+.endif
+.if !empty(_SUNPRO_USE_F2C:M[yY][eE][sS])
+.  include "../../mk/compiler/f2c.mk"
+.endif
 
 .endif	# COMPILER_SUNPRO_MK
