@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.30 2004/10/03 00:18:03 tv Exp $
+# $NetBSD: Makefile,v 1.31 2004/12/03 15:15:07 wiz Exp $
 
 DISTNAME=		mpich-1.2.5.2
-PKGREVISION=	1
+PKGREVISION=		1
 CATEGORIES=		parallel
 MASTER_SITES=		ftp://ftp.mcs.anl.gov/pub/mpi/
 DISTFILES=		${DISTNAME}${EXTRACT_SUFX} mpich-docs.tgz
@@ -20,7 +20,7 @@ INSTALL_TARGET=		install-all
 USE_PERL5=		yes
 HAS_CONFIGURE=		yes
 USE_X11=		yes
-USE_FORTRAN=		yes
+USE_LANGUAGES=		fortran
 
 MPI_RSH?=		ssh
 
