@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.34 2004/11/12 10:45:45 adam Exp $
+# $NetBSD: Makefile,v 1.35 2004/12/03 15:15:07 wiz Exp $
 
 DISTNAME=	pvm3.4.5
 PKGNAME=	pvm-3.4.5
@@ -19,7 +19,7 @@ PVM_SSH?=		${LOCALBASE}/bin/ssh
 
 WRKSRC=			${WRKDIR}/pvm3
 USE_BUILDLINK3=		yes
-USE_FORTRAN=		yes
+USE_LANGUAGES=		fortran
 USE_X11=		yes
 USE_LIBTOOL=		yes
 
